# adwaita-icon-theme

./: .cvsignore  .gitignore  .gitlab-ci.yml  AUTHORS  COPYING  ChangeLog  HOWTO  Hires Guidelines.txt  MAINTAINERS  Makefile.am  NEWS  README  README.md  TODO  TODO.230  aclocal.m4  adwaita-icon-theme.doap  adwaita-icon-theme.pc.in  autogen.sh  configure.ac  configure.in  create-icon-theme.rb  create-icon-theme.sh  find_icons.py  gnome-icon-theme-symbolic.doap  gnome-icon-theme-zip.in  gnome-icon-theme.pc  gnome-icon-theme.pc.in  gnome-icon-theme.spec.in  icon_builder.py  index.theme  index.theme.in  index.theme.in.in  meson.build  meson.options  navigation-icons-experiment.tar.bz2  r.rb  render-bitmaps.rb  render-icon-theme.py  render-symbolic.rb  (+3 more)
16x16/apps/: Makefile.am  accessories-calculator.xcf.bz2  accessories-text-editor.xcf.bz2  applets-screenshooter.xcf.bz2  boot.xcf.bz2  gnome-monitor.xcf.bz2  gnome-run.xcf.bz2  gnome-session.xcf.bz2  gnome-window-manager.xcf.bz2  help-browser.xcf.bz2  im-nov.xcf.bz2  im.xcf.bz2  image-viewer.xcf.bz2  logviewer.xcf.bz2  multimedia-volume-control.xcf.bz2  panel-notification-area.xcf.bz2  preferences-desktop-accessibility.xcf.bz2  preferences-desktop-keyboard.xcf.bz2  preferences-desktop-locale.xcf.bz2  preferences-desktop-remote-desktop.xcf.bz2  preferences-desktop-screensaver.xcf.bz2  preferences-system-windows.xcf.bz2  system-users.xcf.bz2  utilities-system-monitor.xcf.bz2  volume-knob.xcf.bz2
16x16/categories/: Makefile.am  applications-accessories.xcf.bz2  applications-development.xcf.bz2  applications-games.xcf.bz2  applications-graphics.xcf.bz2  applications-multimedia.xcf.bz2  applications-office.xcf.bz2  preferences-desktop-peripherals.xcf.bz2  preferences-desktop-personal.xcf.bz2
16x16/devices/: Makefile.am  battery.xcf.bz2  camera-photo.xcf.bz2  computer.xcf.bz2  drive-harddisk.xcf.bz2  drive-optical.xcf.bz2  drive-removable-media.xcf.bz2  input-keyboard.xcf.bz2  media-flash.xcf.bz2  media-tape.xcf.bz2  printer.xcf.bz2  video-display.xcf
16x16/emblems/: Makefile.am  emblem-package.xcf.bz2
16x16/emotes/: Makefile.am
16x16/filesystems/: Makefile.am
16x16/mimetypes/: Makefile.am  audio-x-generic.xcf.bz2  font-x-generic.xcf.bz2  gnome-mime-application-pdf.xcf.bz2  gnome-mime-application-x-gnome-saved-search.xcf.bz2  gnome-mime-image-x-xcf.xcf.bz2  image-x-generic.xcf.bz2  text-html.xcf.bz2  text-x-generic-template.xcf.bz2  text-x-generic.xcf.bz2  text-x-preview.xcf.bz2  text-x-script.xcf.bz2  video-x-generic.xcf.bz2  x-office-address-book.xcf.bz2  x-office-calendar.xcf.bz2  x-office-document.xcf.bz2  x-office-drawing.xcf.bz2  x-office-presentation.xcf.bz2  x-office-spreadsheet.xcf.bz2
22x22/actions/: Makefile.am  address-book-new.xcf  address-book-new.xcf.bz2  application-exit.xcf.bz2  appointment-new.xcf.bz2  bookmark-new.xcf.bz2  contact-new.xcf.bz2  document-new.xcf.bz2  document-open.xcf.bz2  document-page-setup.xcf.bz2  document-print-preview.xcf.bz2  document-print.xcf.bz2  document-properties.xcf.bz2  document-revert.xcf.bz2  document-save-as.xcf.bz2  document-save.xcf.bz2  document-send.xcf.bz2  edit-copy.xcf.bz2  edit-cut.xcf.bz2  edit-delete.xcf.bz2  edit-find-replace.xcf.bz2  edit-find.xcf.bz2  edit-paste.xcf.bz2  edit-select-all.xcf.bz2  folder-new.xcf.bz2  gtk-edit.xcf.bz2  insert-link.xcf.bz2  insert-text.xcf.bz2  mail-forward.xcf.bz2  mail-mark-junk.xcf.bz2  mail-mark-not-junk.xcf.bz2  mail-mark-unread.xcf.bz2  mail-message-new.xcf.bz2  mail-reply-all.xcf.bz2  mail-reply-sender.xcf.bz2  mail-send-receive.xcf.bz2  media-eject.xcf.bz2  media-playback-pause.xcf.bz2  media-playback-start.xcf.bz2  media-playback-stop.xcf.bz2  (+14 more)
22x22/apps/: Makefile.am  accessibility-directory.xcf.bz2  accessories-calculator.xcf.bz2  accessories-text-editor.xcf.bz2  applets-screenshooter.xcf.bz2  boot.xcf.bz2  gnome-monitor.xcf.bz2  gnome-session.xcf.bz2  im-nov.xcf.bz2  im-yahoo.xcf.bz2  logviewer.xcf.bz2  multimedia-volume-control.xcf.bz2  preferences-desktop-keyboard.xcf.bz2  preferences-desktop-remote-desktop.xcf.bz2  preferences-system-windows.xcf.bz2  system-users.xcf.bz2  utilities-system-monitor.xcf.bz2
22x22/categories/: Makefile.am  applications-accessories.xcf.bz2  applications-development.xcf.bz2  applications-games.xcf.bz2  applications-graphics.xcf.bz2  applications-multimedia.xcf.bz2  applications-office.xcf.bz2  preferences-desktop-peripherals.xcf.bz2  preferences-desktop-personal.xcf.bz2  preferences-desktop.xcf.bz2  preferences-system.xcf.bz2
22x22/devices/: Makefile.am  audio-input-microphone.xcf.bz2  battery.xcf.bz2  camera-photo.xcf.bz2  computer.xcf.bz2  drive-harddisk.xcf.bz2  drive-optical.xcf.bz2  drive-removable-media.xcf.bz2  media-cdrom.xcf.bz2  media-flash.xcf.bz2  media-floppy.xcf.bz2  media-tape.xcf.bz2  multimedia-player.xcf.bz2  printer.xcf.bz2  video-display.xcf
22x22/emblems/: Makefile.am  emblem-package.xcf.bz2
22x22/mimetypes/: Makefile.am  audio-x-generic.xcf.bz2  font-x-generic.xcf.bz2  image-x-generic.xcf.bz2  text-html.xcf.bz2  text-x-generic-template.xcf.bz2  text-x-generic.xcf.bz2  text-x-preview.xcf.bz2  text-x-script.xcf.bz2  video-x-generic.xcf.bz2  x-office-address-book.xcf.bz2  x-office-calendar.xcf.bz2  x-office-document.xcf.bz2  x-office-drawing.xcf.bz2  x-office-presentation.xcf.bz2  x-office-spreadsheet.xcf.bz2
22x22/places/: Makefile.am  folder-remote.xcf.bz2  folder-saved-search.xcf.bz2  folder.xcf.bz2  user-bookmarks.xcf.bz2  user-desktop.xcf.bz2  user-home.xcf.bz2  user-trash.xcf.bz2
22x22/status/: Makefile.am  appointment-missed.xcf.bz2  appointment-soon.xcf.bz2  audio-volume.xcf.bz2  dialog-error.xcf.bz2  dialog-information.xcf.bz2  folder-drag-accept.xcf.bz2  folder-open.xcf.bz2  folder-visiting.xcf.bz2  image-loading.xcf.bz2  mail-unread.xcf.bz2  media-playlist-repeat.xcf.bz2  media-playlist-shuffle.xcf.bz2  network-error.xcf.bz2  network-idle.xcf.bz2  network-offline.xcf.bz2  network-receive.xcf.bz2  network-transmit.xcf.bz2  (+13 more)
Adwaita/: index.theme  meson.build
src/: ChangeLog  Makefile.am  TODO  audio-headphones.blend  audio-headset.blend  renderpngs.py
(+948 files in other folders)
