AC_INIT(index.theme.in)
AM_INIT_AUTOMAKE(gnome-icon-theme, 1.0.7)

AM_MAINTAINER_MODE

AC_PROG_INTLTOOL

ALL_LINGUAS="am az be bg bn ca cs cy da de el es et fa fi fr ga he hi hu id is it ja kn ko li lv mk ml mn ms ne nl no pl pt pt_BR ro ru sk sl sq sr sr@Latn sv ta th tr uk vi wa zh_CN zh_TW"
GETTEXT_PACKAGE=gnome-icon-theme
AC_SUBST(GETTEXT_PACKAGE)
AM_GLIB_GNU_GETTEXT

AC_OUTPUT([
Makefile
gnome-icon-theme.spec
12x12/Makefile
16x16/Makefile
24x24/Makefile
32x32/Makefile
36x36/Makefile
48x48/Makefile
72x72/Makefile
96x96/Makefile
192x192/Makefile
scalable/Makefile
12x12/devices/Makefile        
12x12/emblems/Makefile        
12x12/filesystems/Makefile    
12x12/mimetypes/Makefile      
16x16/apps/Makefile      
16x16/stock/Makefile      
16x16/stock/chart/Makefile      
16x16/stock/code/Makefile      
16x16/stock/data/Makefile      
16x16/stock/document/Makefile      
16x16/stock/form/Makefile      
16x16/stock/generic/Makefile      
16x16/stock/image/Makefile      
16x16/stock/io/Makefile      
16x16/stock/media/Makefile      
16x16/stock/navigation/Makefile      
16x16/stock/net/Makefile      
16x16/stock/object/Makefile      
16x16/stock/table/Makefile      
16x16/stock/text/Makefile      
24x24/apps/Makefile        
24x24/devices/Makefile        
24x24/emblems/Makefile        
24x24/filesystems/Makefile    
24x24/mimetypes/Makefile      
24x24/stock/Makefile
24x24/stock/chart/Makefile
24x24/stock/data/Makefile
24x24/stock/generic/Makefile
24x24/stock/net/Makefile
24x24/stock/text/Makefile
24x24/stock/code/Makefile
24x24/stock/document/Makefile
24x24/stock/image/Makefile
24x24/stock/media/Makefile
24x24/stock/object/Makefile
24x24/stock/form/Makefile
24x24/stock/io/Makefile
24x24/stock/navigation/Makefile
24x24/stock/table/Makefile
32x32/apps/Makefile        
32x32/stock/Makefile        
32x32/stock/chart/Makefile        
32x32/stock/data/Makefile        
32x32/stock/document/Makefile        
32x32/stock/generic/Makefile        
32x32/stock/io/Makefile        
32x32/stock/media/Makefile        
32x32/stock/net/Makefile        
36x36/apps/Makefile
36x36/devices/Makefile        
36x36/emblems/Makefile        
36x36/filesystems/Makefile
36x36/mimetypes/Makefile   
36x36/stock/Makefile   
36x36/stock/document/Makefile   
36x36/stock/generic/Makefile   
48x48/apps/Makefile     
48x48/devices/Makefile     
48x48/emblems/Makefile     
48x48/filesystems/Makefile 
48x48/mimetypes/Makefile   
48x48/stock/Makefile   
48x48/stock/generic/Makefile   
48x48/stock/document/Makefile   
48x48/stock/net/Makefile   
72x72/devices/Makefile     
72x72/emblems/Makefile     
72x72/filesystems/Makefile 
72x72/mimetypes/Makefile   
96x96/apps/Makefile     
96x96/devices/Makefile     
96x96/emblems/Makefile     
96x96/filesystems/Makefile 
96x96/mimetypes/Makefile
192x192/devices/Makefile      
192x192/emblems/Makefile      
192x192/filesystems/Makefile  
192x192/mimetypes/Makefile    
scalable/devices/Makefile      
scalable/emblems/Makefile      
scalable/filesystems/Makefile  
scalable/mimetypes/Makefile    
po/Makefile.in	
])	
