# Process this file with autoconf to produce a configure script.
AC_PREREQ(2.53)

AC_INIT([gnome-icon-theme], [2.13.5.1],
        [http://bugzilla.gnome.org/enter_bug.cgi?product=gnome-icon-theme])
AC_CONFIG_SRCDIR(index.theme.in)

AM_INIT_AUTOMAKE([1.9 tar-ustar])

AC_PROG_INTLTOOL
PKG_PROG_PKG_CONFIG([0.19])

GETTEXT_PACKAGE="${PACKAGE}"
AC_SUBST(GETTEXT_PACKAGE)

ALL_LINGUAS="am ar az be bg bn bs ca cs cy da de el en_CA en_GB es et eu fa fi fr ga gl gu he hi hr hu id is it ja kn ko li lt lv mk ml mn ms nb ne nl nn no pa pl pt pt_BR ro ru rw sk sl sq sr sr@Latn sv ta te th tk tr uk vi wa xh zh_CN zh_TW"
AM_GLIB_GNU_GETTEXT

# AM_GLIB_GNU_GETTEXT above subst. $DATADIRNAME
# this is the directory where the *.{mo,gmo} files are installed
localedir='${prefix}/${DATADIRNAME}/locale'
AC_SUBST(localedir)

# Workaround to make aclocal get the right flags
AC_SUBST(ACLOCAL_AMFLAGS, "\${ACLOCAL_FLAGS}")

# Define the toplevel path here
AC_SUBST(themedir, "\${datadir}/icons/gnome")

UTILS_REQUIRED=0.6.5

AC_MSG_CHECKING([icon-naming-utils >= $UTILS_REQUIRED])
PKG_CHECK_EXISTS(icon-naming-utils >= $UTILS_REQUIRED,
                 have_utils=yes, have_utils=no)
if test "x$have_utils" = "xyes"; then
   UTILS_PATH="`$PKG_CONFIG --variable=program_path icon-naming-utils`"
   ICONMAP="$UTILS_PATH/icon-name-mapping"
   AC_SUBST(ICONMAP)
   AC_MSG_RESULT([yes])
else
   AC_MSG_RESULT([no])
   AC_MSG_ERROR([icon-naming-utils >= $UTILS_REQUIRED is required to build
                 and install gnome-icon-theme])
fi

AC_CONFIG_FILES([
Makefile
gnome-icon-theme.pc
16x16/Makefile
24x24/Makefile
48x48/Makefile
scalable/Makefile
16x16/actions/Makefile
16x16/apps/Makefile
16x16/categories/Makefile
16x16/devices/Makefile
16x16/filesystems/Makefile
16x16/mimetypes/Makefile
16x16/places/Makefile
16x16/status/Makefile
16x16/stock/Makefile
16x16/stock/chart/Makefile
16x16/stock/code/Makefile
16x16/stock/data/Makefile
16x16/stock/document/Makefile
16x16/stock/emoticons/Makefile
16x16/stock/form/Makefile
16x16/stock/generic/Makefile
16x16/stock/image/Makefile
16x16/stock/io/Makefile
16x16/stock/media/Makefile
16x16/stock/navigation/Makefile
16x16/stock/net/Makefile
16x16/stock/object/Makefile
16x16/stock/table/Makefile
16x16/stock/text/Makefile
24x24/actions/Makefile
24x24/apps/Makefile
24x24/categories/Makefile
24x24/devices/Makefile
24x24/emblems/Makefile
24x24/filesystems/Makefile
24x24/mimetypes/Makefile
24x24/places/Makefile
24x24/status/Makefile
24x24/stock/Makefile
24x24/stock/chart/Makefile
24x24/stock/code/Makefile
24x24/stock/data/Makefile
24x24/stock/document/Makefile
24x24/stock/form/Makefile
24x24/stock/generic/Makefile
24x24/stock/image/Makefile
24x24/stock/io/Makefile
24x24/stock/media/Makefile
24x24/stock/navigation/Makefile
24x24/stock/net/Makefile
24x24/stock/object/Makefile
24x24/stock/table/Makefile
24x24/stock/text/Makefile
48x48/actions/Makefile
48x48/apps/Makefile
48x48/categories/Makefile
48x48/devices/Makefile
48x48/emblems/Makefile
48x48/filesystems/Makefile
48x48/mimetypes/Makefile
48x48/places/Makefile
48x48/status/Makefile
48x48/stock/Makefile
48x48/stock/code/Makefile
48x48/stock/data/Makefile
48x48/stock/document/Makefile
48x48/stock/generic/Makefile
48x48/stock/io/Makefile
48x48/stock/net/Makefile
scalable/apps/Makefile
scalable/devices/Makefile
scalable/emblems/Makefile
scalable/mimetypes/Makefile
scalable/places/Makefile
scalable/status/Makefile
scalable/stock/Makefile
scalable/stock/generic/Makefile
po/Makefile.in
])

AC_OUTPUT

